// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component 1`] = `
<li
  className="dropdown nav-item"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="dropdown-toggle nav-link"
    onClick={[Function]}
    type="button"
  >
    <span
      className="mr-2 navbar-text-truncate"
    >
      SLA Status
    </span>
    <svg
      className="lexicon-icon lexicon-icon-caret-bottom"
      focusable="false"
      role="presentation"
    >
      <use
        href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#caret-bottom"
      />
    </svg>
  </button>
  <div
    className="dropdown-menu"
    role="menu"
  >
    <ul
      className="list-unstyled"
    >
      <li>
        <span
          className="disabled dropdown-item"
        >
          No results were found.
        </span>
      </li>
    </ul>
    <ul
      className="list-unstyled"
    />
  </div>
</li>
`;

exports[`Should render component with search wrapper 1`] = `
<li
  className="dropdown nav-item"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="dropdown-toggle nav-link"
    onClick={[Function]}
    type="button"
  >
    <span
      className="mr-2 navbar-text-truncate"
    >
      SLA Status
    </span>
    <svg
      className="lexicon-icon lexicon-icon-caret-bottom"
      focusable="false"
      role="presentation"
    >
      <use
        href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#caret-bottom"
      />
    </svg>
  </button>
  <div
    className="dropdown-menu"
    role="menu"
  >
    <form>
      <div
        className="dropdown-section"
      >
        <div
          className="input-group input-group-sm"
        >
          <div
            className="input-group-item"
          >
            <input
              className="form-control input-group-inset input-group-inset-after"
              onChange={[Function]}
              placeholder="Search for..."
              type="text"
            />
            <span
              className="input-group-inset-item input-group-inset-item-after"
            >
              <button
                className="btn btn-unstyled"
                type="button"
              >
                <svg
                  className="lexicon-icon lexicon-icon-search"
                  focusable="false"
                  role="presentation"
                >
                  <use
                    href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#search"
                  />
                </svg>
              </button>
            </span>
          </div>
        </div>
      </div>
    </form>
    <ul
      className="list-unstyled"
    >
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-0"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 0
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-1"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 1
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-2"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 2
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-3"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 3
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-4"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 4
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-5"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 5
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-6"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 6
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-7"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 7
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-8"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 8
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-9"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 9
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-10"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 10
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-11"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 11
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-12"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 12
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={false}
            className="custom-control-input"
            data-key="key-13"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 13
            </span>
          </span>
        </label>
      </li>
      <li
        className="dropdown-item active"
      >
        <label
          className="custom-control custom-radio"
        >
          <input
            checked={true}
            className="custom-control-input"
            data-key="key-14"
            name="filter-item-radio-group"
            onChange={[Function]}
            type="radio"
          />
          <span
            className="custom-control-label"
          >
            <span
              className="custom-control-label-text"
            >
              Item Name 14
            </span>
          </span>
        </label>
      </li>
    </ul>
  </div>
</li>
`;
